# pyproj-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: chapter.md  conf.py  index.md
src/pyproj_template/module/: component.py
tests/: test_function.py
