[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyproj-template"
version = "0.1.0"
description = "Your project description"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Dennis Beermann", email = "dennis.2.beermann@gmail.com" },
]
dependencies = [
  "numpy",
]

[dependency-groups]
dev = [
  "ruff",
  "pyright",
  "pre-commit>=4.5.1",
]

[project.urls]
Homepage = "https://github.com/dennis-beermann/pyproj-template"
Repository = "https://github.com/dennis-beermann/pyproj-template"

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py313"
cache-dir = ".cache/ruff"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-ra --cov=pyproj-template --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/pyproj-template"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__",
]
