[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyproj"
version = "0.1.0"
description = "Your project description"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Dennis Beermann", email = "dennis.2.beermann@gmail.com" },
]
dependencies = [
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
  "myst-parser>=5.0.0",
  "pre-commit>=4.5.1",
  "pyright>=1.1.408",
  "pytest>=9.0.2",
  "pytest-cov>=7.1.0",
  "pytest-html>=4.2.0",
  "ruff>=0.15.9",
  "sphinx>=9.1.0",
  "sphinx-rtd-theme>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/dennis-beermann/pyproj"
Repository = "https://github.com/dennis-beermann/pyproj"

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py313"
cache-dir = ".cache/ruff"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
-ra
--cov=pyproj
--cov-report=term-missing
--cov-report=html:.artifacts/pytest-cov/coverage-html
--html=.artifacts/pytest/pytest-report.html
--junitxml=.artifacts/pytest/junit.xml
"""
cache_dir = ".cache/pytest"

[tool.coverage.run]
source = ["src/pyproj"]
data_file = ".cache/pytest-cov/.coverage"

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__",
]
